--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="css/next-sidebar.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
+    <link rel="icon" href="svg/favicon.svg" type="image/gif" sizes="16x16">
     <title>Ecommerce Dashboard</title>
 </head>
 <body class="app">
@@ -332,9 +333,7 @@
                                 </div>
                             </div>
                             <div class="col-md-4">
-                                <div class="chart">
-                                    <p> <span class="dynamicbar">Loading..</span> </p>
-                                </div>
+
                             </div>
                         </div>
                     </div>
@@ -349,9 +348,7 @@
                                 </div>
                             </div>
                             <div class="col-md-4">
-                                <div class="chart">
-                                    <p> <span class="dynamicbar">Loading..</span> </p>
-                                </div>
+
                             </div>
                         </div>
                     </div>
@@ -366,9 +363,7 @@
                                 </div>
                             </div>
                             <div class="col-md-4">
-                                <div class="chart">
-                                    <p> <span class="dynamicbar">Loading..</span> </p>
-                                </div>
+
                             </div>
                         </div>
                     </div>
@@ -383,9 +378,7 @@
                                 </div>
                             </div>
                             <div class="col-md-4">
-                                <div class="chart">
-                                    <p> <span class="dynamicbar">Loading..</span> </p>
-                                </div>
+
                             </div>
                         </div>
                     </div>
@@ -561,7 +554,7 @@
                                         </div>
                                         <div class="col-md-10">
                                             <div class="desc">
-                                                <h6>Smith</h6>
+                                                <h6>Micheal</h6>
                                                 <p>
                                                     Computer
                                                 </p>
@@ -576,7 +569,7 @@
                                         </div>
                                         <div class="col-md-10">
                                             <div class="desc">
-                                                <h6>Smith</h6>
+                                                <h6>John</h6>
                                                 <p>
                                                     Computer
                                                 </p>
@@ -798,10 +791,8 @@
     <script src="js/aos.js"></script>
     <script src="js/bootstrap.js"></script>
     <script src="js/jquery-3.6.0.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
     <script src="js/perfect-scrollbar.min.js"></script>
     <script src="js/next-sidebar.js"></script>
-    <script src="js/jquery.sparkline.min.js"></script>
     <script src="js/d3-5.8.2.min.js" charset="utf-8"></script>
     <script src="js/c3.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
