--- a/pages/apps/contact.html
+++ b/pages/apps/contact.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="../../css/perfect-scrollbar.css">
     <link rel="stylesheet" href="../../css/next-sidebar.css">
     <link rel="stylesheet" href="../../css/style.css">
+    <link rel="icon" href="../../svg/favicon.svg" type="image/gif" sizes="16x16">
     <title>Ecommerce Dashboard</title>
 </head>
 <body class="app">
@@ -323,7 +324,7 @@
     <section class="contact-section">
         <div class="container">
             <div class="row">
-                <div class="col-md-3 peace">
+                <div class="col-md-6 col-lg-3 peace">
                     <div class="info">
                         <img src="http://placehold.it/80x80/100" alt="">
                         <h5>John Doe</h5>
@@ -341,7 +342,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3 peace">
+                <div class="col-md-6 col-lg-3 peace">
                     <div class="info">
                         <img src="http://placehold.it/80x80/100" alt="">
                         <h5>John Doe</h5>
@@ -359,7 +360,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3 peace">
+                <div class="col-md-6 col-lg-3 peace">
                     <div class="info">
                         <img src="http://placehold.it/80x80/100" alt="">
                         <h5>John Doe</h5>
@@ -377,7 +378,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3 peace">
+                <div class="col-md-6 col-lg-3 peace">
                     <div class="info">
                         <img src="http://placehold.it/80x80/100" alt="">
                         <h5>John Doe</h5>
@@ -396,7 +397,7 @@
                     </div>
                 </div>
                 <!-- Second Row -->
-                <div class="col-md-3 peace">
+                <div class="col-md-6 col-lg-3 peace">
                     <div class="info">
                         <img src="http://placehold.it/80x80/100" alt="">
                         <h5>John Doe</h5>
@@ -414,7 +415,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3 peace">
+                <div class="col-md-6 col-lg-3 peace">
                     <div class="info">
                         <img src="http://placehold.it/80x80/100" alt="">
                         <h5>John Doe</h5>
@@ -432,7 +433,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3 peace">
+                <div class="col-md-6 col-lg-3 peace">
                     <div class="info">
                         <img src="http://placehold.it/80x80/100" alt="">
                         <h5>John Doe</h5>
@@ -450,7 +451,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3 peace">
+                <div class="col-md-6 col-lg-3 peace">
                     <div class="info">
                         <img src="http://placehold.it/80x80/100" alt="">
                         <h5>John Doe</h5>
@@ -475,14 +476,11 @@
 
     <!-- JS Scripts -->
     <!-- JS Scripts -->
-    <script src="../../js/aos.js"></script>
     <script src="../../js/bootstrap.js"></script>
     <script src="../../js/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
-    <script src="../../js/charts.js"></script>
     <script src="../../js/perfect-scrollbar.min.js"></script>
     <script src="../../js/next-sidebar.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <script src="../../js/main.js"></script>
 </body>
 </html>
