--- a/pages/charts/charts.html
+++ b/pages/charts/charts.html
@@ -11,11 +11,12 @@
     <link rel="stylesheet" href="../../css/bootstrap.css">
     <link rel="stylesheet" href="../../css/perfect-scrollbar.css">
     <link rel="stylesheet" href="../../css/next-sidebar.css">
+    <link rel="stylesheet" href="../../css/c3.css">
     <link rel="stylesheet" href="../../css/style.css">
+    <link rel="icon" href="../../svg/favicon.svg" type="image/gif" sizes="16x16">
     <title>Ecommerce Dashboard</title>
 </head>
 <body class="app">
-
 
     <!-- Start Sidebar -->
     <div class="sidebar">
@@ -323,27 +324,17 @@
     <section class="charts" style="padding: 40px 0;">
         <div class="container">
             <div class="row">
-                <div class="col-md-6">
-                    <div id="chartPage1"></div>
+                <div class="col-md-6 my-3">
+                    <div id="firstChart"></div>
                 </div>
-                <div class="col-md-6">
-                    <div id="chartPage2"></div>
+                <div class="col-md-6 my-3">
+                    <div id="secondChart"></div>
                 </div>
-                <div class="col-md-6">
-                    <div id="chartPage3"></div>
+                <div class="col-md-6 my-3">
+                    <div id="thirdChart"></div>
                 </div>
-                <div class="col-md-6">
-                    <div id="chartPage4"></div>
-                </div>
-                <div class="col-md-6">
-                    <div id="chartPage5"></div>
-                </div>
-                <div class="col-md-6">
-                    <div id="chartPage6"></div>
-                </div>
-
-                <div class="col-md-12">
-                    <div id="chartPage7"></div>
+                <div class="col-md-6 my-3">
+                    <div id="forthChart"></div>
                 </div>
             </div>
         </div>
@@ -355,10 +346,11 @@
     <script src="../../js/bootstrap.js"></script>
     <script src="../../js/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
-    <script src="../../js/charts.js"></script>
     <script src="../../js/perfect-scrollbar.min.js"></script>
     <script src="../../js/next-sidebar.js"></script>
+    <script src="../../js/d3-5.8.2.min.js" charset="utf-8"></script>
+    <script src="../../js/c3.min.js"></script>
+    <script src="../../js/defchartPage.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <script src="../../js/main.js"></script>
 </body>
 </html>
