--- a/pages/pages/price.html
+++ b/pages/pages/price.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="../../css/perfect-scrollbar.css">
     <link rel="stylesheet" href="../../css/next-sidebar.css">
     <link rel="stylesheet" href="../../css/style.css">
+    <link rel="icon" href="../../svg/favicon.svg" type="image/gif" sizes="16x16">
     <title>Ecommerce Dashboard</title>
 </head>
 <body class="app">
@@ -324,7 +325,7 @@
     <section class="price text-center">
         <div class="container">
             <div class="row">
-                <div class="col-md-3">
+                <div class="col-md-3 my-3">
                     <div class="card">
                         <div class="card-header">
                             <h4>Basic</h4>
@@ -339,7 +340,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3 my-3">
                     <div class="card">
                         <div class="card-header">
                             <h4>Stander</h4>
@@ -354,7 +355,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3 my-3">
                     <div class="card">
                         <div class="card-header">
                             <h4>Premium</h4>
@@ -369,7 +370,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3 my-3">
                     <div class="card">
                         <div class="card-header">
                             <h4>Professional</h4>
@@ -387,19 +388,14 @@
             </div>
         </div>
     </section>
-
     <!-- End Price Section -->
 
 
     <!-- JS Scripts -->
-    <script src="../../js/aos.js"></script>
     <script src="../../js/bootstrap.js"></script>
     <script src="../../js/jquery-3.6.0.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
-    <script src="../../js/charts.js"></script>
     <script src="../../js/perfect-scrollbar.min.js"></script>
     <script src="../../js/next-sidebar.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <script src="../../js/main.js"></script>
 </body>
 </html>
