--- a/pages/plugins/editor.html
+++ b/pages/plugins/editor.html
@@ -1,3 +1,8 @@
+<!-- This is Editor Plugin Page -->
+<!-- You can Change This editor as You like -->
+<!-- Just Read a Document from Here -->
+<!-- https://ckeditor.com/docs/ckeditor5/latest/examples/builds/classic-editor.html -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,6 +17,7 @@
     <link rel="stylesheet" href="../../css/perfect-scrollbar.css">
     <link rel="stylesheet" href="../../css/next-sidebar.css">
     <link rel="stylesheet" href="../../css/style.css">
+    <link rel="icon" href="../../svg/favicon.svg" type="image/gif" sizes="16x16">
     <title>Ecommerce Dashboard</title>
 </head>
 <body class="app">
