--- a/pages/plugins/mixitup.html
+++ b/pages/plugins/mixitup.html
@@ -1,3 +1,8 @@
+<!-- This is Mix it up Plugin Page -->
+<!-- You can Change This editor as You like -->
+<!-- Just Read a Document from Here -->
+<!-- https://www.kunkalabs.com/mixitup/ -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,6 +17,8 @@
     <link rel="stylesheet" href="../../css/perfect-scrollbar.css">
     <link rel="stylesheet" href="../../css/next-sidebar.css">
     <link rel="stylesheet" href="../../css/style.css">
+    <link rel="stylesheet" href="../../css/responsive.css">
+    <link rel="icon" href="../../svg/favicon.svg" type="image/gif" sizes="16x16">
     <title>Ecommerce Dashboard</title>
 </head>
 <body class="app">
@@ -332,40 +339,40 @@
                 <button class="btn btn-warning my-4" data-filter=".category-d">Click</button>
             </div>
             <div class="row mixitup">
-                <div class="col-md-3 my-3 mix category-a">
+                <div class="col-sm-12 col-md-6 col-lg-3 my-3 mix category-a">
                     <img src="http://placehold.it/250/100" alt="">
                 </div>
-                <div class="col-md-3 my-3 mix category-b">
+                <div class="col-sm-12 col-md-6 col-lg-3 my-3 mix category-b">
                     <img src="http://placehold.it/250/100" alt="">
                 </div>
-                <div class="col-md-3 my-3 mix category-c">
+                <div class="col-sm-12 col-md-6 col-lg-3 my-3 mix category-c">
                     <img src="http://placehold.it/250/100" alt="">
                 </div>
-                <div class="col-md-3 my-3 mix category-d">
+                <div class="col-sm-12 col-md-6 col-lg-3 my-3 mix category-d">
                     <img src="http://placehold.it/250/100" alt="">
                 </div>
-                <div class="col-md-3 my-3 mix category-a">
+                <div class="col-sm-12 col-md-6 col-lg-3 my-3 mix category-a">
                     <img src="http://placehold.it/250/100" alt="">
                 </div>
-                <div class="col-md-3 my-3 my-3 mix category-b">
+                <div class="col-sm-12 col-md-6 col-lg-3 my-3 my-3 mix category-b">
                     <img src="http://placehold.it/250/100" alt="">
                 </div>
-                <div class="col-md-3 my-3 mix category-c">
+                <div class="col-sm-12 col-md-6 col-lg-3 my-3 mix category-c">
                     <img src="http://placehold.it/250/100" alt="">
                 </div>
-                <div class="col-md-3 my-3 mix category-d">
+                <div class="col-sm-12 col-md-6 col-lg-3 my-3 mix category-d">
                     <img src="http://placehold.it/250/100" alt="">
                 </div>
-                <div class="col-md-3 my-3 mix category-a">
+                <div class="col-sm-12 col-md-6 col-lg-3 my-3 mix category-a">
                     <img src="http://placehold.it/250/100" alt="">
                 </div>
-                <div class="col-md-3 my-3 mix category-b">
+                <div class="col-sm-12 col-md-6 col-lg-3 my-3 mix category-b">
                     <img src="http://placehold.it/250/100" alt="">
                 </div>
-                <div class="col-md-3 my-3 mix category-c">
+                <div class="col-sm-12 col-md-6 col-lg-3 my-3 mix category-c">
                     <img src="http://placehold.it/250/100" alt="">
                 </div>
-                <div class="col-md-3 my-3 mix category-d">
+                <div class="col-sm-12 col-md-6 col-lg-3 my-3 mix category-d">
                     <img src="http://placehold.it/250/100" alt="">
                 </div>
             </div>
@@ -375,10 +382,8 @@
     <!-- End Mixitup -->
 
     <!-- JS Scripts -->
-    <script src="../../js/aos.js"></script>
     <script src="../../js/bootstrap.js"></script>
     <script src="../../js/jquery-3.6.0.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
     <script src="../../js/perfect-scrollbar.min.js"></script>
     <script src="../../js/mixitup.min.js"></script>
     <script src="../../js/next-sidebar.js"></script>
