--- a/pages/pages/500.html
+++ b/pages/pages/500.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="../../css/perfect-scrollbar.css">
     <link rel="stylesheet" href="../../css/next-sidebar.css">
     <link rel="stylesheet" href="../../css/style.css">
+    <link rel="icon" href="../../svg/favicon.svg" type="image/gif" sizes="16x16">
     <title>Ecommerce Dashboard</title>
 </head>
 <body class="app">
@@ -44,14 +45,10 @@
        
     
     <!-- JS Scripts -->
-    <script src="../../js/aos.js"></script>
     <script src="../../js/bootstrap.js"></script>
     <script src="../../js/jquery-3.6.0.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
-    <script src="../../js/charts.js"></script>
     <script src="../../js/perfect-scrollbar.min.js"></script>
     <script src="../../js/next-sidebar.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <script src="../../js/main.js"></script>
 </body>
 </html>
